--- a/chp7/chp7.vcxproj.filters
+++ b/chp7/chp7.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="chp7ex7.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="chp7ex8.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="split.h">
